# USTC-CompilerH-2021FA

./: README.md
PW1/: sample-io.c  sample.c
PW1/HW/: x86汇编码学习笔记.md
PW1/HW/H1/: answer.md
PW1/HW/H2/: answer.md
PW1/HW/H3/: Makefile  answer.md  optexampleARMO0.s  optexampleARMO2.s  sort.c  test.c  test.s  test_O2.s
PW2/: example  example.cpp  static_cast.cpp
PW2/Examples/: typeid-s1.cpp  typeid-s2.cpp
PW2/doc/step1/: answer.md
PW2/doc/step2/: answer.md  test  test.cpp
PW2/doc/step3/: answer.md
PW2/src/step1/: test1  test1.cpp  test2  test2.cpp
PW2/src/step3/: dynamic_cast  dynamic_cast.cpp  static_cast  static_cast.cpp  static_cast_map.cpp  test  test.cpp  typeid  typeid.cpp
PW3/Examples/: auto_ptr
PW3/src/step1/: a.out  answer.md  test1  test1.cpp  test2  test2.cpp  verify  verify.cpp
PW3/src/step2/: a.out  answer.md  test1  test1.cpp
PW3/src/step3/: a.out  answer.md  verify  verify.cpp  verify2  verify2.cpp
PW4/PW/P1/: answer.md
PW4/demo/: CMakeLists.txt  README.md
PW4/sysyfParser/: CMakeLists.txt  README.md
PW5/: CMakeLists.txt
PW5/doc/: AST.md  answer.md
PW5/include/: SyntaxTreeChecker.h  location.hh  sysyfParser.h
PW5/src/: SyntaxTreeChecker.cpp  sysyfParser.cpp  sysyfScanner.cpp
PW6/: note.md
PW6/master/: CMakeLists.txt  README.md
PW6/master/Student/task2/cpp/: CMakeLists.txt  assign_gen.cpp  func_gen.cpp  if_gen.cpp  while_gen.cpp
PW7/: README.md  实验报告B1.md  思考题B1.md  答辩PPT.pptx  踩坑.md
PW7/BZ_Backend_Student/: .gitignore  CMakeLists.txt  README.md
PW7/SysYF_Pass_Student/: README.md  callinst.ll
(+214 files in other folders)
